re-added Wired Roboports and Roboport Power Fields with a Startup setting to enable/disable

--- a/locale/en/betterbots.cfg
+++ b/locale/en/betterbots.cfg
@@ -1,11 +1,15 @@
 [technology-name]
 worker-robots-battery=Worker robot power cells
 roboport-charge-pads=Advanced roboports
+wired-roboports=Wired roboports
+roboport-power-field=Roboport power field
 charting-roboports=Roboport sensor array
 
 [technology-description]
 worker-robots-battery=Increases the flying range of logistic and construction robots by increasing their energy reserves.
 roboport-charge-pads=Improves all existing and future roboports by adding an additional charging pad and increasing their maximum energy output. This will also unlock new tiers of roboport technologies
+wired-roboports=Allows roboports to be wired directly to nearby power poles and roboports.
+roboport-power-field=Allows roboports to power nearby structures.
 charting-roboports=Allows roboports to scan and reveal nearby sectors on the minimap.\n\nLevel 1: Charts up to the logistic area\nLevel 2: Charts up to the construction area
 
 [modifier-description]
@@ -15,11 +19,13 @@ worker-robot-battery=Worker robot energy reserves: +__1__
 betterbots-show-gui=Show/hide GUI Button
 betterbots-show-scheduler-gui=Show/hide the scheduler GUI
 betterbots-scheduler-tasks-per-tick=Scheduled tasks executed per tick
+betterbots-enable-wired-roboports=Wired Roboports & Roboports Power Fields
 
 [mod-setting-description]
 betterbots-show-gui=Enable or disable the Better Bots GUI button on the top bar.
 betterbots-show-scheduler-gui=Enable or disable the Better Bots scheduler interface, which shows all the scheduled events and their completion.\n\nIf you have a high number of roboports on the map, anything that upgrades roboports is scheduled to prevent the game from freezing. This GUI allows to monitor the progress.
 betterbots-scheduler-tasks-per-tick=Number of tasks executed each in-game tick from the scheduled queues.\nA higher number will reduce the total time required to run all the scheduled actions, but may have a bad impact on performance.
+betterbots-enable-wired-roboports=Enable Wired Roboports & Roboports Power Fields technologies & functionality
 
 [betterbots-gui]
 left_label=Better Bots Technologies
